RESOLVED FIXED24131
Unfork RefCounting fix-ups
https://bugs.webkit.org/show_bug.cgi?id=24131
Summary Unfork RefCounting fix-ups
Dimitri Glazkov (Google)
Reported 2009-02-24 12:34:36 PST
It is with great dismay that I introduce this change and beg forgiveness. We will fix this right. But not today.
Attachments
Fix-up COM/RefCounted dichotomy in Chromium port, v1. (1.58 KB, patch)
2009-02-24 12:36 PST, Dimitri Glazkov (Google)
fishd: review+
Dimitri Glazkov (Google)
Comment 1 2009-02-24 12:36:54 PST
Created attachment 27925 [details] Fix-up COM/RefCounted dichotomy in Chromium port, v1. WebCore/ChangeLog | 11 +++++++++++ WebCore/page/chromium/AccessibilityObjectWrapper.h | 9 ++++++++- 2 files changed, 19 insertions(+), 1 deletions(-)
Eric Seidel (no email)
Comment 2 2009-02-24 16:03:37 PST
Comment on attachment 27925 [details] Fix-up COM/RefCounted dichotomy in Chromium port, v1. Sigh.
Darin Fisher (:fishd, Google)
Comment 3 2009-02-24 16:08:55 PST
Comment on attachment 27925 [details] Fix-up COM/RefCounted dichotomy in Chromium port, v1. >diff --git a/WebCore/page/chromium/AccessibilityObjectWrapper.h b/WebCore/page/chromium/AccessibilityObjectWrapper.h >index 9920e4d..af32567 100644 >--- a/WebCore/page/chromium/AccessibilityObjectWrapper.h >+++ b/WebCore/page/chromium/AccessibilityObjectWrapper.h >@@ -39,7 +39,14 @@ namespace WebCore { > > protected: > AccessibilityObjectWrapper(AccessibilityObject* obj) >- : RefCounted<AccessibilityObjectWrapper>(0), m_object(obj) { } >+ : m_object(obj) >+ { >+ // Default refCount is 1, but the webkit-win version of this is not >+ // RefCounted, so this is not properly created using ::create. >+ // FIXME: Once AccessibleBase no longer implements COM interfaces, >+ // make it not RefCounted. This comment is a bit confusing. The PLATFORM(WIN) AccessibilityObjectWrapper class does inherit from IUnknown, so it does do initialized-to-zero reference counting as well. Perhaps the comment can be: // FIXME: Remove this once our immediate subclass no longer uses COM. Otherwise, looks good. -Darin
Darin Fisher (:fishd, Google)
Comment 4 2009-02-24 16:09:47 PST
Comment on attachment 27925 [details] Fix-up COM/RefCounted dichotomy in Chromium port, v1. (sorry, didn't mean to remove the r+ from eric)
Dimitri Glazkov (Google)
Comment 5 2009-02-24 16:20:25 PST
Note You need to log in before you can comment on or make changes to this bug.