2009-02-24  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=24131
        Fix-up COM/RefCounted dichotomy in Chromium port.

        * page/chromium/AccessibilityObjectWrapper.h:
        (WebCore::AccessibilityObjectWrapper::AccessibilityObjectWrapper): Added
        explicit setting of recount.

Canonical link: https://commits.webkit.org/33272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41197 268f45cc-cd09-0410-ab3c-d52691b4dbfc