WebCore/page/chromium/AccessibilityObjectWrapper.h
@@ -39,7 +39,11 @@ namespace WebCore {
 
     protected:
         AccessibilityObjectWrapper(AccessibilityObject* obj)
-            : RefCounted<AccessibilityObjectWrapper>(0), m_object(obj) { }
+            : m_object(obj)
+        {
+            // FIXME: Remove this once our immediate subclass no longer uses COM.
+            m_refCount = 0;
+        }
         AccessibilityObjectWrapper() : m_object(0) { }
 
         AccessibilityObject* m_object;
